Gui running using maven